monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ProdAndOverriddenProdUseSameAttrNameForDiffNTs_super.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.valid;

grammar ProdAndOverriddenProdUseSameAttrNameForDiffNTs_super{

  A;

  Prod1 = x:A;

  Prod2 = c:B;

  Prod3 = "b";

  State =
  "state" Name
  ( ("{" (State)* "}") | ";") ;
}
